# validtr-zg

./: .gitignore  CLAUDE.md  README.md  architecture-v3.md
.gocache/: trim.txt
docs/: index.md  package-lock.json
tests/: test_output.py
validtr-engine/: config.example.yaml  orchestrator.py  pyproject.toml
validtr-engine/api/: server.py
validtr-engine/api/routes/: run.py
validtr-engine/estimator/: harness_overhead.py  harness_report.py  projection.py  tokenizer.py
validtr-engine/executor/: engine.py  safety.py
validtr-engine/models/: projection.py  score.py  stack.py
validtr-engine/providers/: anthropic.py  base.py  gemini.py  model_catalog.py  openai.py  pricing.py  usage.py
validtr-engine/provisioner/: compose_generator.py
validtr-engine/provisioner/templates/: agent-base.Dockerfile
validtr-engine/recommender/: engine.py  framework_registry.py  llm_reasoning.py  prompts.py  skill_scanner.py  skills_registry.py
validtr-engine/retry/: analysis.py  controller.py
validtr-engine/scorer/: code_scorer.py  context_compressor.py  engine.py
validtr-engine/test_generator/: engine.py
validtr-engine/tests/: test_agent_report_emit.py  test_anthropic_json_mode.py  test_context_compressor.py  test_framework_registry.py  test_harness_overhead.py  test_harness_report.py  test_mcp_transport.py  test_model_catalog.py  test_models.py  test_pricing.py  test_projection.py  test_projection_models.py  test_providers.py  test_provisioner.py  test_retry.py  test_run_response_projection.py  test_skill_scanner.py  test_skills_registry.py  test_test_generator.py  test_tokenizer.py  test_usage.py
validtr-ui/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
(+1071 files in other folders)
