[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "validtr-engine"
version = "0.1.0"
description = "Python engine for validtr — agentic stack validation tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "anthropic>=0.49.0",
    "openai>=1.65.0",
    "google-genai>=1.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "docker>=7.1.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]
# Live model registry (deprecation flags, cost-ordered upgrade paths) — replaces the
# hardcoded model list in retry/analysis.py and recommender/prompts.py when installed.
cascade = [
    "cascadeflow>=0.1.0",
]
# Semantic artifact compression for the completeness judge (scorer/context_compressor.py).
# Pulls in torch/transformers/sentence-transformers — heavy, opt-in only, also gated by
# VALIDTR_COMPRESS_ARTIFACTS=1 at runtime.
compress = [
    "headroom-ai[all]",
]
# NVIDIA SkillSpector is not published on PyPI; install it separately (see its README:
# `make install`, git checkout, or Docker) onto this engine's PYTHONPATH, then set
# VALIDTR_SCAN_SKILLS=1 to enable scanning in recommender/skill_scanner.py.

[tool.hatch.build.targets.wheel]
packages = [
    "analyzer",
    "executor",
    "models",
    "providers",
    "provisioner",
    "recommender",
    "retry",
    "scorer",
    "test_generator",
    "api",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
